--- a/styles/style.css
+++ b/styles/style.css
@@ -8,10 +8,11 @@
   --color-secondary: #34c83c;
   --color-secondary-dark: #2ead34;
   --font-family-primary: verdana, geneva, sans-serif;
-  --dl-color-1: #8343ab;
+  --dl-color-1: #8630e6;
   --dl-color-2: #f71e6a;
   --ul-color-1: #ff8000;
   --ul-color-2: #ff0000;
+  --meter-background-color: rgba(0, 0, 0, 0.25);
   --meter-width: 32rem;
   --meter-height: 32rem;
   --meter-padding: 10rem;
@@ -20,7 +21,6 @@
   --ncsu-red: #c00;
   --ncsu-red-dark: rgb(173, 0, 0);
   --border-radius-primary: 0.5em;
-  --mobile-scale: 1.4;
 }
 
 html,
@@ -30,54 +30,54 @@ body {
   margin: 0;
   overflow: hidden;
   padding: 0;
-  width: 100%;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  width: 100%;
 }
 
 .outer-content {
-  background: var(--background-color-primary);
-  height: 100%;
-  margin: 0;
-  padding: 1rem;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background: var(--background-color-primary);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0;
+  padding: 1rem;
+  width: 100%;
 }
 
 .main-content {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: var(--background-color-primary);
   color: var(--font-color-primary);
   display: -ms-grid;
   display: grid;
   font-family: var(--font-family-primary);
       grid-template-areas: "test" "info" "button";
-  max-width: 32rem;
-  max-height: 64rem;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
   -ms-grid-rows: 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr 1fr;
+  height: 100%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   justify-items: center;
-  row-gap: 1rem;
-  height: 100%;
-  width: 100%;
+  max-height: 64rem;
+  max-width: 32rem;
   position: relative;
+  row-gap: 1rem;
+  width: 100%;
 }
 
 .main-content .start-btn-container {
@@ -102,7 +102,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #2ece2e;
+  background-color: var(--color-secondary);
   border-radius: 4px;
   color: black;
   cursor: pointer;
@@ -124,7 +124,12 @@ body {
 }
 
 .test-container {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-radius: var(--border-radius-primary);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   display: -ms-grid;
   display: grid;
       grid-template-areas: "test" "info";
@@ -132,45 +137,40 @@ body {
       grid-template-columns: 1fr;
   -ms-grid-rows: 1fr 0.1fr;
       grid-template-rows: 1fr 0.1fr;
-  position: relative;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  row-gap: 0;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  max-height: 100%;
   justify-content: center;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  max-height: 100%;
+  position: relative;
+  row-gap: 0;
+  width: 100%;
 }
 
 .test-container .info {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   -ms-grid-row-align: start;
       align-self: start;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -ms-grid;
+  display: grid;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: info;
-  margin-top: calc((-100%) + 50% + 50% * (0.6));
-  display: -ms-grid;
-  display: grid;
       grid-template-areas: "amount" "kind";
-  -ms-grid-rows: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
   justify-items: center;
+  margin-top: calc((-100%) + 50% + 50% * (0.6));
 }
 
 .test-container .info .test-kind {
+  font-size: 4rem;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: kind;
-  font-size: 4rem;
 }
 
 .test-container .info .amount-container {
@@ -196,15 +196,15 @@ body {
 
 .square-box {
   height: 0%;
-  width: 100%;
   padding-bottom: 100%;
   position: relative;
+  width: 100%;
 }
 
 .square-box * {
+  height: 100%;
   position: absolute;
   width: 100%;
-  height: 100%;
 }
 
 .test-info-container {
@@ -212,24 +212,26 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  max-width: 32rem;
   padding: 1em;
   width: 100%;
-  max-width: 32rem;
+  position: relative;
 }
 
 .test-info-container .info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .test-info-container .info .test-kind {
@@ -242,38 +244,38 @@ body {
 }
 
 .unit-container {
+  --font-size-lg: 3rem;
+  --font-size-sm: calc(var(--font-size-lg) / 4);
+  --height: calc(var(--font-size-lg) + var(--font-size-sm) * 1.5);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 0;
+          column-gap: 0;
   display: -ms-grid;
   display: grid;
+      grid-template-areas: "amount" "unit";
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
   -ms-grid-rows: 90% 10%;
       grid-template-rows: 90% 10%;
-      grid-template-areas: "amount" "unit";
-  -webkit-column-gap: 0;
-          column-gap: 0;
-  row-gap: 0;
-  padding: 0;
-  margin: auto;
-  text-align: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  height: var(--height);
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  --font-size-lg: 3rem;
-  --font-size-sm: calc(var(--font-size-lg) / 4);
-  --height: calc(var(--font-size-lg) + var(--font-size-sm) * 1.5);
-  height: var(--height);
+  margin: auto;
+  padding: 0;
+  row-gap: 0;
+  text-align: center;
   width: var(--height);
 }
 
 .unit-container .amount {
-  text-align: center;
+  font-size: var(--font-size-lg);
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: amount;
-  font-size: var(--font-size-lg);
+  text-align: center;
 }
 
 .unit-container .unit {
@@ -284,55 +286,38 @@ body {
   text-align: center;
 }
 
-.meter-numbers {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-family: var(--font-family-primary);
-  font-size: 1em;
-  font-weight: bold;
-  height: 100%;
-  position: absolute;
-  width: 100%;
-  z-index: 1;
-}
-
-.meter-numbers div {
-  position: absolute;
-  -webkit-transition: all cubic-bezier(0.09, 0.91, 0.5, 1.1) 500ms;
-  transition: all cubic-bezier(0.09, 0.91, 0.5, 1.1) 500ms;
-}
-
 .box-shadow {
   border-radius: var(--border-radius-primary);
   -webkit-box-shadow: 0.5rem 0.5rem 40px 10px rgba(0, 0, 0, 0.2);
           box-shadow: 0.5rem 0.5rem 40px 10px rgba(0, 0, 0, 0.2);
+  -webkit-transition: all cubic-bezier(0.09, 0.91, 0.5, 1.1) 500ms;
+  transition: all cubic-bezier(0.09, 0.91, 0.5, 1.1) 500ms;
 }
 
 .pane {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 1rem;
-  width: 100%;
   height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   max-width: var(--meter-width);
+  padding: 1rem;
+  position: absolute;
+  width: 100%;
 }
 
 .pane .text {
-  text-align: center;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .pane .text h1,
@@ -341,8 +326,8 @@ body {
 }
 
 .pane i {
-  font-style: normal;
   font-size: 12rem;
+  font-style: normal;
 }
 
 .pane-start {
@@ -370,6 +355,28 @@ body {
   color: white;
 }
 
+.progress-bar-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  padding: 0.5rem;
+  height: 1rem;
+}
+
+.progress-bar-container .progress-bar {
+  border-radius: 0;
+  height: 1rem;
+  width: 0;
+}
+
 @media all and (max-width: 782px) {
   html,
   body {
@@ -393,6 +400,11 @@ body {
 
 @media all and (orientation: landscape) and (max-height: 992px) {
   .main-content {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-column-gap: 1rem;
+            column-gap: 1rem;
         grid-template-areas: "test info" "test button";
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
@@ -401,15 +413,10 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-column-gap: 1rem;
-            column-gap: 1rem;
-    row-gap: 2rem;
-    width: 100%;
     max-height: 100%;
     max-width: 100%;
+    row-gap: 2rem;
+    width: 100%;
   }
   .main-content .start-btn-container {
     -ms-flex-item-align: center;
@@ -427,14 +434,14 @@ body {
         align-self: end;
   }
   .test-container .info {
-        grid-template-areas: "amount kind";
-    -ms-grid-rows: 1fr;
-        grid-template-rows: 1fr;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+        grid-template-areas: "amount kind";
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
   }
   .test-info-container {
     -webkit-box-orient: vertical;
@@ -447,19 +454,19 @@ body {
     padding: 2rem;
   }
   .test-info-container .info {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .test-info-container .info .test-kind {
     margin-left: 0;
