--- a/styles/style.css
+++ b/styles/style.css
@@ -212,9 +212,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   max-width: 32rem;
   padding: 1em;
   width: 100%;
@@ -364,8 +363,8 @@ body {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
-  padding: 0.5rem;
   height: 1rem;
+  padding: 1rem;
 }
 
 .progress-bar-container .progress-bar {
@@ -377,7 +376,7 @@ body {
 @media all and (max-width: 782px) {
   html,
   body {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
 }
 
@@ -386,12 +385,20 @@ body {
   body {
     font-size: 0.8rem;
   }
+  .unit-container {
+    --font-size-lg: 2.5rem
+    ;
+  }
 }
 
 @media all and (max-width: 320px) {
   html,
   body {
     font-size: 0.7rem;
+  }
+  .unit-container {
+    --font-size-lg: 2.5rem
+    ;
   }
 }
 
@@ -412,7 +419,6 @@ body {
             justify-content: center;
     max-height: 100%;
     max-width: 100%;
-    row-gap: 2rem;
     width: 100%;
   }
   .main-content .start-btn-container {
@@ -421,14 +427,15 @@ body {
         align-self: center;
   }
   .main-content .test-container {
+    height: 100%;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
   }
   .main-content .test-info-container {
-    -ms-flex-item-align: end;
-        -ms-grid-row-align: end;
-        align-self: end;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
   }
   .test-container .info {
     -webkit-box-align: center;
