--- a/styles/style.scss
+++ b/styles/style.scss
@@ -78,7 +78,7 @@ body {
         "button";
 
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 0.1fr;
 
     height: 100%;
 
@@ -162,10 +162,10 @@ body {
 
         justify-items: center;
 
-        margin-top: calc((-100%) + 50% + 50% * (0.6));
+        margin-top: calc((-100%) + 50% + 50% * (0.55));
 
         .test-kind {
-            font-size: 4rem;
+            font-size: 3.5rem;
             grid-area: kind;
         }
 
@@ -182,7 +182,7 @@ body {
         z-index: 1;
 
         canvas {
-            padding: 1em;
+            padding: 2.5rem;
         }
     }
 }
@@ -225,7 +225,7 @@ body {
 }
 
 .unit-container {
-    --font-size-lg: 3rem;
+    --font-size-lg: 3.5rem;
     --font-size-sm: calc(var(--font-size-lg) / 4);
     --height: calc(var(--font-size-lg) + var(--font-size-sm) * 1.5);
     align-items: center;
@@ -345,7 +345,7 @@ body {
 @media all and (max-width: $screen-size-md) {
     html,
     body {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
     }
 }
 
@@ -355,8 +355,10 @@ body {
         font-size: 0.8rem;
     }
 
-    .unit-container {
-        --font-size-lg: 2.5rem;
+    .test-info-container > .info {
+        .unit-container {
+            --font-size-lg: 3rem;
+        }
     }
 }
 
@@ -366,8 +368,10 @@ body {
         font-size: 0.7rem;
     }
 
-    .unit-container {
-        --font-size-lg: 2.5rem;
+    .test-info-container > .info {
+        .unit-container {
+            --font-size-lg: 2.5rem;
+        }
     }
 }
 
