Added border-box sizing as default, added NCSU icon to html.

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,8 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 1rem;
   width: 100%;
 }
