--- a/styles/style.scss
+++ b/styles/style.scss
@@ -59,6 +59,7 @@ body {
     height: 100%;
     justify-content: center;
     margin: 0;
+    box-sizing: border-box;
 
     padding: 1rem;
     width: 100%;
