--- a/styles/style.scss
+++ b/styles/style.scss
@@ -179,7 +179,8 @@ body {
         margin-top: -25%;
 
         .test-kind {
-            font-size: 3.5rem;
+            font-size: 3rem;
+            bottom: 0;
             grid-area: kind;
         }
 
