--- a/styles/style.scss
+++ b/styles/style.scss
@@ -81,7 +81,7 @@ body {
         "button";
 
     grid-auto-columns: 1fr;
-    grid-auto-rows: 1fr;
+    grid-template-rows: 1fr 1fr 0.5fr;
     row-gap: 1rem;
     height: calc(100% + 1rem);
 
