Re-added aria labels & c.

--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -12,6 +12,7 @@
 }
 
 .start-btn {
+    border: none;
     align-items: center;
     background-color: var(--color-secondary);
     border-radius: var(--border-radius-primary);
