--- a/styles/style.scss
+++ b/styles/style.scss
@@ -49,6 +49,7 @@ body {
     height: 100%;
     margin: 0;
     overflow: hidden;
+    overflow-y: scroll;
     padding: 0;
     user-select: none;
     width: 100%;
