--- a/styles/style.css
+++ b/styles/style.css
@@ -14,9 +14,9 @@
   --ul-color-2: #ff0000;
   --meter-background-color: rgba(0, 0, 0, 0.25);
   --meter-width: 32rem;
-  --meter-height: 32rem;
-  --meter-padding: 10rem;
-  --meter-outer-radius: 30rem;
+  --meter-height: 64rem;
+  --meter-padding: 10em;
+  --meter-outer-radius: 30em;
   --ncsu-font: "UniversCondensed";
   --ncsu-red: #c00;
   --ncsu-red-dark: rgb(173, 0, 0);
@@ -26,61 +26,33 @@
 html,
 body {
   background: var(--background-color-primary);
-  height: 100%;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   overflow-y: scroll;
   padding: 0;
+  height: 100%;
+  width: 100%;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  width: 100%;
-}
-
-.outer-content {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: var(--background-color-primary);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 1rem;
-  width: 100%;
 }
 
 .main-content {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   background: var(--background-color-primary);
   color: var(--font-color-primary);
+  position: relative;
   display: -ms-grid;
   display: grid;
   font-family: var(--font-family-primary);
       grid-template-areas: "test" "info" "button";
-  grid-auto-columns: 1fr;
-  -ms-grid-rows: 1fr 1fr 0.5fr;
-      grid-template-rows: 1fr 1fr 0.5fr;
-  row-gap: 1rem;
-  height: calc(100% + 1rem);
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  justify-items: center;
-  max-height: 64rem;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr 0.2fr 0.2fr;
+      grid-template-rows: 1fr 0.2fr 0.2fr;
+  row-gap: 1em;
   max-width: 32rem;
-  align-items: center;
-  position: relative;
-  width: 100%;
+  padding: 1em;
 }
 
 .main-content .start-btn-container {
@@ -101,74 +73,75 @@ body {
   grid-area: info;
 }
 
-.test-container {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: var(--border-radius-primary);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  display: -ms-grid;
-  display: grid;
-      grid-template-areas: "test" "info";
-  grid-auto-columns: 1fr;
-  grid-auto-rows: auto;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  justify-content: center;
-  max-height: 100%;
-  position: relative;
-  width: 100%;
+.pane-container {
   height: 100%;
+  width: 100%;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: test;
+  border-radius: var(--border-radius-primary);
+}
+
+.pane-container .text {
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.pane-container .text h1,
+.pane-container .text h2 {
+  color: var(--ul-color-1);
+}
+
+.pane-hidden {
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.test-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .test-container .info {
-  -ms-grid-row-align: start;
-      align-self: start;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
   display: -ms-grid;
   display: grid;
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: info;
       grid-template-areas: "amount" "kind";
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
   -ms-grid-rows: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
   justify-items: center;
-  margin-top: -25%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: calc(-25% + 1em);
 }
 
 .test-container .info .test-kind {
-  font-size: 3rem;
-  bottom: 0;
+  text-align: center;
+  font-size: 4em;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: kind;
 }
 
 .test-container .info .amount-container {
-  -ms-flex-item-align: end;
-      align-self: end;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: amount;
 }
 
 .test-container .square-box {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: test;
   z-index: 1;
 }
 
 .test-container .square-box canvas {
-  padding: 2.5rem;
+  padding: 1em;
 }
 
 .square-box {
@@ -180,24 +153,12 @@ body {
 
 .square-box * {
   height: 100%;
-  position: absolute;
   width: 100%;
+  position: absolute;
 }
 
 .test-info-container {
-  border-radius: var(--border-radius-primary);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  max-width: 32rem;
-  padding: 1rem;
-  width: 100%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  position: relative;
+  padding: 1em;
 }
 
 .test-info-container .info {
@@ -211,22 +172,20 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.test-info-container .info .test-kind {
-  font-size: 1.2rem;
-  text-align: center;
-}
-
-.unit-container {
-  --font-size-lg: 3.5rem;
-  --font-size-sm: calc(var(--font-size-lg) / 4);
-  --height: calc(var(--font-size-lg) + var(--font-size-sm) * 1.5);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-column-gap: 0;
-          column-gap: 0;
+  text-align: center;
+}
+
+.test-info-container .info .test-kind {
+  font-size: 1.5em;
+}
+
+.unit-container {
+  --font-size-lg: 3.5em;
+  --font-size-sm: calc(var(--font-size-lg) / 4);
+  --height: calc(var(--font-size-lg) + var(--font-size-sm));
   display: -ms-grid;
   display: grid;
       grid-template-areas: "amount" "unit";
@@ -234,15 +193,8 @@ body {
       grid-template-columns: 1fr;
   -ms-grid-rows: 90% 10%;
       grid-template-rows: 90% 10%;
-  height: var(--height);
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: auto;
-  padding: 0;
-  row-gap: 0;
+  row-gap: 0.2em;
   text-align: center;
-  width: var(--height);
   -webkit-transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;
   transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;
 }
@@ -256,71 +208,20 @@ body {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: amount;
-  text-align: center;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
 }
 
 .unit-container .unit {
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
   font-size: var(--font-size-sm);
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: unit;
-  text-align: center;
-}
-
-.constrained-container {
-  max-width: 32rem;
-  max-height: 32rem;
-}
-
-.box-shadow {
-  border-radius: var(--border-radius-primary);
-  -webkit-box-shadow: 4px 0px 20px 0px rgba(0, 0, 0, 0.5);
-          box-shadow: 4px 0px 20px 0px rgba(0, 0, 0, 0.5);
-}
-
-.pane {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  height: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  max-width: var(--meter-width);
-  padding: 1rem;
-  position: absolute;
-  width: 100%;
-}
-
-.pane .text {
-  font-size: 1.5rem;
-  text-align: center;
-}
-
-.pane .text h1,
-.pane .text h2 {
-  color: var(--ul-color-1);
-}
-
-.pane i {
-  font-size: 12rem;
-  font-style: normal;
-}
-
-.pane-start {
-  opacity: 1;
-}
-
-.pane-end {
-  visibility: hidden;
-  pointer-events: none;
+  margin-top: calc(-1 * var(--font-size-sm));
 }
 
 .test-kind {
@@ -358,13 +259,14 @@ body {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
-  height: 1rem;
-  padding: 1rem;
+  height: 1em;
+  padding: 1em 0;
+  position: relative;
 }
 
 .progress-bar-container .progress-bar {
   border-radius: 0;
-  height: 1rem;
+  height: 1em;
   width: 0;
 }
 
@@ -380,9 +282,6 @@ body {
   body {
     font-size: 0.8rem;
   }
-  .test-info-container > .info .unit-container {
-    --font-size-lg: 3rem;
-  }
 }
 
 @media all and (max-width: 320px) {
@@ -390,29 +289,18 @@ body {
   body {
     font-size: 0.75rem;
   }
-  .test-info-container > .info .unit-container {
-    --font-size-lg: 2.5rem;
-  }
 }
 
 @media all and (orientation: landscape) and (max-height: 992px) {
   .main-content {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-column-gap: 1rem;
-            column-gap: 1rem;
+    -webkit-column-gap: 1em;
+            column-gap: 1em;
         grid-template-areas: "test info" "test button";
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
     -ms-grid-rows: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    max-height: 100%;
-    max-width: 100%;
-    width: 100%;
+    max-width: 64rem;
   }
   .main-content .start-btn-container {
     -ms-flex-item-align: center;
@@ -420,9 +308,6 @@ body {
         align-self: center;
   }
   .main-content .test-container {
-    max-height: 64rem;
-    max-width: 32rem;
-    height: 100%;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
@@ -433,33 +318,19 @@ body {
         align-self: center;
   }
   .test-container .info {
-    padding: 0.5rem;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
         grid-template-areas: "amount kind";
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 1fr;
-        grid-template-rows: 1fr;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
   }
   .test-info-container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    padding: 2rem;
   }
   .test-info-container .info {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -468,25 +339,11 @@ body {
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
-  .test-info-container .info .test-kind {
-    font-size: 1.5rem;
-    margin-left: 0;
-  }
-  .test-info-container .info .unit-container {
-    margin-right: 0;
-  }
-}
-
-@media all and (orientation: landscape) and (max-height: 480px) {
-  html,
-  body {
-    font-size: 0.7rem;
-  }
 }
 
 @media all and (orientation: landscape) and (max-height: 320px) {
   html,
   body {
-    font-size: 0.5rem;
+    font-size: 0.75em;
   }
 }
