--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,9 +1,9 @@
 @use "sass:math";
 
 $meter-width: 32rem;
-$meter-height: 32rem;
-$meter-padding: 10rem;
-$meter-outer-radius: 30rem;
+$meter-height: 64rem;
+$meter-padding: 10em;
+$meter-outer-radius: 30em;
 $max-height-multiplier: 2;
 
 $screen-size-ss: 256px;
@@ -12,6 +12,8 @@ $screen-size-sm: 480px;
 $screen-size-md: 768px;
 $screen-size-lg: 992px;
 $screen-size-xl: 1200px;
+
+$row-gap: 1em;
 
 :root {
     --background-color-primary: rgba(51, 51, 51, 1);
@@ -46,33 +48,20 @@ $screen-size-xl: 1200px;
 html,
 body {
     background: var(--background-color-primary);
-    height: 100%;
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     overflow-y: scroll;
     padding: 0;
-    user-select: none;
-    width: 100%;
-}
-
-.outer-content {
-    align-items: center;
-    background: var(--background-color-primary);
-    display: flex;
     height: 100%;
-    justify-content: center;
-    margin: 0;
-    box-sizing: border-box;
-
-    padding: 1rem;
     width: 100%;
+    user-select: none;
 }
 
 .main-content {
-    align-items: center;
     background: var(--background-color-primary);
-
     color: var(--font-color-primary);
+    position: relative;
+
     display: grid;
     font-family: var(--font-family-primary);
 
@@ -81,21 +70,11 @@ body {
         "info"
         "button";
 
-    grid-auto-columns: 1fr;
-    grid-template-rows: 1fr 1fr 0.5fr;
-    row-gap: 1rem;
-    height: calc(100% + 1rem);
-
-    justify-content: center;
-    justify-items: center;
-
-    max-height: $meter-height * $max-height-multiplier;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 0.2fr 0.2fr;
+    row-gap: $row-gap;
     max-width: $meter-width;
-    align-items: center;
-
-    position: relative;
-
-    width: 100%;
+    padding: 1em;
 
     .start-btn-container {
         grid-area: button;
@@ -110,62 +89,58 @@ body {
     }
 }
 
-.test-container {
-    align-items: center;
-    border-radius: var(--border-radius-primary);
-    box-sizing: border-box;
-    display: grid;
-
-    grid-template-areas:
-        "test"
-        "info";
-
-    grid-auto-columns: 1fr;
-    grid-auto-rows: auto;
-    justify-content: center;
-
-    justify-content: center;
-    max-height: 100%;
-    position: relative;
-
-    width: 100%;
+.pane-container {
     height: 100%;
+    width: 100%;
 
+    grid-area: test;
+    border-radius: var(--border-radius-primary);
+
+    .text {
+        font-size: 1.5em;
+        text-align: center;
+        h1,
+        h2 {
+            color: var(--ul-color-1);
+        }
+    }
+}
+
+.pane-hidden {
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.test-container {
+    display: flex;
+    flex-direction: column;
     .info {
-        align-self: start;
-        box-sizing: content-box;
-
         display: grid;
-        grid-area: info;
         grid-template-areas:
             "amount"
             "kind";
-        grid-template-columns: 1fr;
+        grid-template-columns: auto;
         grid-template-rows: 1fr 1fr;
 
         justify-items: center;
-        margin-top: -25%;
+        align-items: center;
+        margin-top: calc(-25% + 1em);
 
         .test-kind {
-            font-size: 3rem;
-            bottom: 0;
+            text-align: center;
+            font-size: 4em;
             grid-area: kind;
         }
 
         .amount-container {
-            align-self: end;
             grid-area: amount;
         }
     }
 
     .square-box {
-        box-sizing: border-box;
-        grid-area: test;
-
         z-index: 1;
-
         canvas {
-            padding: 2.5rem;
+            padding: 1em;
         }
     }
 }
@@ -178,30 +153,22 @@ body {
 
     * {
         height: 100%;
-        position: absolute;
         width: 100%;
+        position: absolute;
     }
 }
 
 .test-info-container {
-    border-radius: var(--border-radius-primary);
-    display: flex;
-    justify-content: space-evenly;
-    max-width: $meter-width;
-    padding: 1rem;
-    width: 100%;
-    box-sizing: border-box;
-
-    position: relative;
-
+    padding: 1em;
     .info {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
+        text-align: center;
 
         .test-kind {
-            font-size: 1.2rem;
-            text-align: center;
+            font-size: 1.5em;
         }
         .amount-container {
         }
@@ -209,12 +176,10 @@ body {
 }
 
 .unit-container {
-    --font-size-lg: 3.5rem;
+    --font-size-lg: 3.5em;
     --font-size-sm: calc(var(--font-size-lg) / 4);
-    --height: calc(var(--font-size-lg) + var(--font-size-sm) * 1.5);
-    align-items: center;
+    --height: calc(var(--font-size-lg) + var(--font-size-sm));
 
-    column-gap: 0;
     display: grid;
     grid-template-areas:
         "amount"
@@ -222,14 +187,9 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: 90% 10%;
 
-    height: var(--height);
-    justify-content: center;
-    margin: auto;
-    padding: 0;
-    row-gap: 0;
+    row-gap: 0.2em;
 
     text-align: center;
-    width: var(--height);
     transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;
 
     &.in-progress {
@@ -239,60 +199,15 @@ body {
     .amount {
         font-size: var(--font-size-lg);
         grid-area: amount;
-        text-align: center;
+        align-self: start;
     }
 
     .unit {
+        align-self: end;
         font-size: var(--font-size-sm);
         grid-area: unit;
-        text-align: center;
+        margin-top: calc(-1 * var(--font-size-sm));
     }
-}
-
-.constrained-container {
-    max-width: $meter-width;
-    max-height: $meter-height;
-}
-
-.box-shadow {
-    border-radius: var(--border-radius-primary);
-    box-shadow: 4px 0px 20px 0px rgba(0, 0, 0, 0.5);
-}
-
-.pane {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    max-width: var(--meter-width);
-
-    padding: 1rem;
-    position: absolute;
-    width: 100%;
-
-    .text {
-        font-size: 1.5rem;
-        text-align: center;
-        h1,
-        h2 {
-            color: var(--ul-color-1);
-        }
-    }
-
-    i {
-        font-size: 12rem;
-        font-style: normal;
-    }
-}
-
-.pane-start {
-    opacity: 1;
-}
-
-.pane-end {
-    visibility: hidden;
-    pointer-events: none;
 }
 
 .test-kind {
@@ -327,12 +242,13 @@ body {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 1rem;
-    padding: 1rem;
+    height: 1em;
+    padding: $row-gap 0;
+    position: relative;
 
     .progress-bar {
         border-radius: 0;
-        height: 1rem;
+        height: 1em;
         width: 0;
     }
 }
@@ -349,12 +265,6 @@ body {
     body {
         font-size: 0.8rem;
     }
-
-    .test-info-container > .info {
-        .unit-container {
-            --font-size-lg: 3rem;
-        }
-    }
 }
 
 @media all and (max-width: $screen-size-xs) {
@@ -362,38 +272,25 @@ body {
     body {
         font-size: 0.75rem;
     }
-
-    .test-info-container > .info {
-        .unit-container {
-            --font-size-lg: 2.5rem;
-        }
-    }
 }
 
 @media all and (orientation: landscape) and (max-height: $screen-size-lg) {
     .main-content {
-        align-items: center;
-        column-gap: 1rem;
+        column-gap: 1em;
         grid-template-areas:
             "test info"
             "test button";
 
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-        justify-content: center;
 
-        max-height: 100%;
-        max-width: 100%;
-        width: 100%;
+        max-width: $meter-height;
 
         .start-btn-container {
             align-self: center;
         }
 
         .test-container {
-            max-height: $meter-height * $max-height-multiplier;
-            max-width: $meter-width;
-            height: 100%;
             align-self: center;
         }
 
@@ -404,47 +301,24 @@ body {
 
     .test-container {
         .info {
-            padding: 0.5rem;
-            align-items: center;
             grid-template-areas: "amount kind";
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr;
+            grid-template-columns: auto;
+            grid-template-rows: auto;
         }
     }
 
     .test-info-container {
         flex-direction: column;
-        justify-content: center;
-        padding: 2rem;
-
         .info {
-            align-items: center;
-            display: flex;
             flex-direction: row;
             justify-content: space-between;
-
-            .test-kind {
-                font-size: 1.5rem;
-                margin-left: 0;
-            }
-
-            .unit-container {
-                margin-right: 0;
-            }
         }
-    }
-}
-
-@media all and (orientation: landscape) and (max-height: $screen-size-sm) {
-    html,
-    body {
-        font-size: 0.7rem;
     }
 }
 
 @media all and (orientation: landscape) and (max-height: $screen-size-xs) {
     html,
     body {
-        font-size: 0.5rem;
+        font-size: 0.75em;
     }
 }
