--- a/styles/utils.css
+++ b/styles/utils.css
@@ -1,3 +1,51 @@
+.mvh-25 {
+  max-height: 25vh;
+}
+
+.mvh-50 {
+  max-height: 50vh;
+}
+
+.mvh-75 {
+  max-height: 75vh;
+}
+
+.mvh-100 {
+  max-height: 100vh;
+}
+
+.mvw-25 {
+  max-width: 25vw;
+}
+
+.mvw-50 {
+  max-width: 50vw;
+}
+
+.mvw-75 {
+  max-width: 75vw;
+}
+
+.mvw-100 {
+  max-width: 100vw;
+}
+
+.box-shadow {
+  border-radius: var(--border-radius-primary);
+  -webkit-box-shadow: 4px 0px 20px 0px rgba(0, 0, 0, 0.5);
+          box-shadow: 4px 0px 20px 0px rgba(0, 0, 0, 0.5);
+}
+
+.justify-content-space-evenly {
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.justify-items-center {
+  justify-items: center;
+}
+
 .start-color {
   background-color: var(--color-secondary);
   border-radius: 0.25em;
