--- a/styles/style.scss
+++ b/styles/style.scss
@@ -95,14 +95,18 @@ body {
 
     grid-area: test;
     border-radius: var(--border-radius-primary);
+}
 
-    .text {
-        font-size: 1.5em;
-        text-align: center;
-        h1,
-        h2 {
-            color: var(--ul-color-1);
-        }
+.pane-info {
+    h1,
+    h2 {
+        color: var(--ul-color-1);
+    }
+    font-size: 1.5em;
+    text-align: center;
+
+    .icon-lg {
+        font-size: 10em;
     }
 }
 
