--- a/styles/style.css
+++ b/styles/style.css
@@ -102,16 +102,6 @@ body {
   pointer-events: none;
 }
 
-.test-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
 .test-container .info {
   display: -ms-grid;
   display: grid;
@@ -272,7 +262,7 @@ body {
           flex-direction: row;
   width: 100%;
   height: 1em;
-  padding: 1em 0;
+  padding: 1em;
   position: relative;
 }
 
