--- a/styles/style.scss
+++ b/styles/style.scss
@@ -117,8 +117,6 @@ body {
 }
 
 .test-container {
-    display: flex;
-    flex-direction: column;
     .info {
         display: grid;
         grid-template-areas:
@@ -254,7 +252,7 @@ body {
     flex-direction: row;
     width: 100%;
     height: 1em;
-    padding: $row-gap 0;
+    padding: $row-gap;
     position: relative;
 
     .progress-bar {
